RESOLVED FIXED241409
REGRESSION(r295200): Avoid style update when resolving container queries in other frames
https://bugs.webkit.org/show_bug.cgi?id=241409
Summary REGRESSION(r295200): Avoid style update when resolving container queries in o...
Antti Koivisto
Reported 2022-06-08 04:36:24 PDT
layout recursion case
Attachments
Patch (4.65 KB, patch)
2022-06-08 04:45 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2022-06-08 04:38:14 PDT
Antti Koivisto
Comment 2 2022-06-08 04:45:15 PDT
EWS
Comment 3 2022-06-08 10:23:50 PDT
Committed r295385 (251392@main): <https://commits.webkit.org/251392@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 460090 [details].
Note You need to log in before you can comment on or make changes to this bug.