REGRESSION(r295200): Avoid style update when resolving container queries in other frames https://bugs.webkit.org/show_bug.cgi?id=241409 <rdar://94536162>

Reviewed by Alan Bujtas.

* LayoutTests/fast/css/container-query-style-recursion-expected.txt: Added.
* LayoutTests/fast/css/container-query-style-recursion.html: Added.
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::updateStyleIfNeeded):
(WebCore::Document::isResolvingContainerQueriesForSelfOrAncestor const):

Also check ancestors.

* Source/WebCore/dom/Document.h:
* Source/WebCore/page/FrameViewLayoutContext.cpp:
(WebCore::FrameViewLayoutContext::performLayout):

Canonical link: https://commits.webkit.org/251392@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295385 268f45cc-cd09-0410-ab3c-d52691b4dbfc